syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.jcop";
option java_outer_classname = "JcopProto";

import "google/protobuf/timestamp.proto";

package jcop;

// Service Definition
service JCOPSimulator {
  rpc Open (OpenRequest) returns (OpenReply) {}
  rpc TransmitAPDU (Capdu) returns (Rapdu) {}
  rpc Reset(ResetRequest) returns (ResetReply){}
  rpc Stop(StopRequest) returns (StopReply){}
  rpc GetStatus(GetStatusRequest) returns (GetStatusReply){}
}

// The request message containing the simulator version
message OpenRequest {
   Version version = 1;
}

// The response message containing a session ID and the simulators ATR
message OpenReply {
  string simulator_id = 1;
  bytes atr = 2;
}

message Capdu {
  string simulator_id = 1;
  bytes apdu = 2;
}

message Rapdu {
  string simulator_id = 1;
  bytes apdu = 2;
}

message ResetRequest {
  string simulator_id = 1;
  bool warm = 2;
}

message ResetReply {
  string simulator_id = 1;
  bytes atr = 2;
}

message StopRequest {
  string simulator_id = 1;
}

message StopReply {
  string simulator_id = 1;
  bool success = 2;
}

message GetStatusRequest {
  string simulator_id = 1;
}

message GetStatusReply {
  string simulator_id = 1;
  google.protobuf.Timestamp created = 2;
  google.protobuf.Timestamp last_interaction = 3;
  bytes last_command = 4;
  bytes last_response = 5;
}

enum Version {
  UNSPECIFIED = 0;
  JCOP4_7_R1_00_4_RC17 = 1;
}

